{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1911,
  "lineage": "707bcfd0-8528-15ba-62b0-51da4070b168",
  "resources": [
    {
      "module": "module.rds.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-05a5fa64eed923594",
            "description": "RDS Mysql security group",
            "egress": [],
            "id": "sg-05a5fa64eed923594",
            "ingress": [
              {
                "cidr_blocks": ["34.65.182.106/32"],
                "description": "Allow network from EKS in another aws account",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": ["42.112.244.177/32"],
                "description": "Allow network from my local to rds",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "rds-cloud-computing-sg-20230505025711360800000003",
            "name_prefix": "rds-cloud-computing-sg-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "rds-cloud-computing-sg",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "rds-cloud-computing-sg",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08418079db0f4fb30"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["34.65.182.106/32"],
            "description": "Allow network from EKS in another aws account",
            "from_port": 3306,
            "id": "sgrule-3331120763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a5fa64eed923594",
            "security_group_rule_id": "sgr-0a1e535cd0cac60ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.data.external.get_my_public_ip",
            "module.rds.module.security_group.aws_security_group.this",
            "module.rds.module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": ["42.112.244.177/32"],
            "description": "Allow network from my local to rds",
            "from_port": 0,
            "id": "sgrule-429494794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05a5fa64eed923594",
            "security_group_rule_id": "sgr-04ec0435b33312028",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.data.external.get_my_public_ip",
            "module.rds.module.security_group.aws_security_group.this",
            "module.rds.module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}